# slowstore

./: LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json
examples/: simple.py
slowstore/: __init__.py  change.py  model_proxy.py  proxy.py  slowstore.py  store.py  utils.py
tests/: test_slowstore.py
