[tool.poetry]
name = "slowstore"
version = "1.0.1"
description = "File json storage backend for your collections"
authors = ["Costa Halicea <costa@codechem.com>"]

homepage = "https://github.com/42dotmk/slowstore"
repository = "https://github.com/42dotmk/slowstore"
documentation = "https://github.com/42dotmk/slowstore/blob/main/README.md"

license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
debugpy = "^1.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
